Fix button accresibility at header and club toggle. Add metata description. Fox header flickering.

--- a/src/components/components/header/header.scss
+++ b/src/components/components/header/header.scss
@@ -136,6 +136,7 @@
 
     &__inner {
       padding-bottom: 0;
+      min-height: 100px;
     }
 
     &__button {
